--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>My Times</title>
+    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <header class="header">
+      <div class="logo">
+        <img src="./resources/images/img-myt-logo.jpg"/>
+        <h3>My Times</h3>
+      </div>
+      <nav class="nav">
+        <span><a href="#world">World</a></span>
+        <span><a href="#us">U.S.</a></span>
+        <span><a href="#tech">Tech</a></span>
+        <span><a href="#science">Science</a></span>
+      </nav>
+    </header>
+
+
+
 
   </body>
 </html>
