--- a/index.html
+++ b/index.html
@@ -1,81 +1,98 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>My Times</title>
-    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
-  </head>
-  <body>
-    <header>
-      <div class="logo">
-        <img src="./resources/images/img-myt-logo.jpg"/>
-        <span>My Times</span>
+
+<head>
+  <meta charset="utf-8">
+  <title>My Times</title>
+  <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+</head>
+
+<body>
+  <header>
+    <div class="logo">
+      <img src="./resources/images/img-myt-logo.jpg" />
+      <span>My Times</span>
+    </div>
+    <nav class="nav">
+      <span><a href="#">World</a></span>
+      <span><a href="#">U.S.</a></span>
+      <span><a href="#">Tech</a></span>
+      <span><a href="#">Science</a></span>
+    </nav>
+  </header>
+  <div class="content">
+    <div class="column large">
+      <div class="main-story">
+        <div class="image-content">
+          <span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny".</span>
+        </div>
+        <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien
+          massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus,
+          lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam
+          sit amet fringilla massa.
+        </p>
       </div>
-      <nav class="nav">
-        <span><a href="#">World</a></span>
-        <span><a href="#">U.S.</a></span>
-        <span><a href="#">Tech</a></span>
-        <span><a href="#">Science</a></span>
-      </nav>
-    </header>
-    <div class="content">
-      <div class="column large">
-        <div>
-          <p>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny".</p>
+      <div class="stories">
+        <div class="story">
+          <div class="text">
+            <h2>Orca Spends Vacation at World Puget</h2>
+            <p class="paragraph">
+              PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...
+            </p>
+          </div>
+          <div class="earth image-content">
+            <span>Earth Spings Backwards for 2017</span>
+          </div>
         </div>
-        <div>
-          <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.
-          </p>
-        </div>
-        <div>
-          <h2>Orca Spends Vacation at World Puget</h2>
-          <p>
-            PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...
-          </p>
-        </div>
-        <div>
-          <p>Earth Spings Backwards for 2017</p>
-        </div>
-        <div>
-          <h2>Burger For Breakfast: How Early is too Early?</h2>
-          <p>
-            Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.
-          </p>
-        </div>
-        <div>
-          <p>Reasearch Shows Cameras Erase Memory</p>
+        <div class="story">
+          <div class="text">
+            <h2>Burger For Breakfast: How Early is too Early?</h2>
+            <p class="paragraph">
+              Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.
+            </p>
+          </div>
+          <div class="hipster image-content">
+            <span>Reasearch Shows Cameras Erase Memory</span>
+          </div>
         </div>
       </div>
-      <div class="column medium">
-        <div>
+    </div>
+    <div class="column medium">
+      <div class="story">
+        <div class="text">
           <h2>FBI Finds Action Star Guilty of False Advertising</h2>
-          <p>
-            WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...
-          </p>
-        </div>
-        <div>
-          <p>Cats in Control- Is It a Thing?</p>
-        </div>
-        <div>
-          <p>
-            BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.
+          <p class="paragraph">
+            WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur
+            mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam
+            felis...
           </p>
         </div>
       </div>
-      <div class="column small">
-        <div>
-          <img src="./resources/images/img-news-bite.png"/>
+      <div class="story">
+        <div class="cat image-content">
+          <span>Cats in Control- Is It a Thing?</span>
         </div>
-        <div>
+        <p class="paragraph">
+          BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum
+          velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.
+        </p>
+      </div>
+    </div>
+    <div class="column small">
+      <div class="story">
+        <div class="cookie">
+          <img src="./resources/images/img-news-bite.png" />
+        </div>
+      </div>
+      <div class="story">
+        <div class="text">
           <h2>News Bites</h3>
-          <p>
-            Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can
-          </p>
-      </div>
-
-
-
-
+                <p class="paragraph">
+                  Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can
+                </p>
+              </div>
+            </div>
+          </div>
     </div>
   </body>
 </html>
