--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img src="./resources/images/img-myt-logo.jpg" />
       <span>My Times</span>
     </div>
-    <nav class="nav">
+    <nav>
       <span><a href="#">World</a></span>
       <span><a href="#">U.S.</a></span>
       <span><a href="#">Tech</a></span>
@@ -79,20 +79,32 @@
       </div>
     </div>
     <div class="column small">
-      <div class="story">
-        <div class="cookie">
-          <img src="./resources/images/img-news-bite.png" />
-        </div>
+      <img class="cookie" src="./resources/images/img-news-bite.png" />
+      <div class="news-bites">
+        <h3>News Bites</h3>
+        <span class="bite">Cat Emoji Goes Viral</span>
+        <span class="bite">Buy Youtube Views</span>
+        <span class="bite">Home Business Advertising Ideas</span>
+        <span class="bite">Advertising Internet Online</span>
+        <span class="bite">Illustration in Marketing Materials</span>
+        <span class="bite">Finally a Top Secret Way You Can</span>
       </div>
-      <div class="story">
-        <div class="text">
-          <h2>News Bites</h3>
-                <p class="paragraph">
-                  Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can
-                </p>
-              </div>
-            </div>
-          </div>
     </div>
-  </body>
+  </div>
+  <footer>
+    <div class="info">
+      <span class="my-times">My Times</span>
+      <nav>
+        <span><a href="#">World</a></span>
+        <span><a href="#">U.S.</a></span>
+        <span><a href="#">Tech</a></span>
+        <span><a href="#">Science</a></span>
+      </nav>
+    </div>
+    <div class="copy">
+      <p>&copy2016, My Times(A Division of Codecademy bite)</p>
+    </div>
+  </footer>
+</body>
+
 </html>
